tests/snapshots/formats__pkcs12__legacy-rc2-3des.p12.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ legacy-rc2-3des.p12 — PKCS#12 key store, version 3, MAC sha1  [0x0+0x417]
  ▾ Contents — MAC verified
    ▾ Certificate: legacy key — X.509 certificate, CN=fillyfoal p12 test, self-signed, valid 2026-10-06 to 2036-10-03, EC P-256 (prime256v1), CA  [#1:0x31+0x1bb]
      ▾ Certificate — SEQUENCE, CN=fillyfoal p12 test, self-signed, valid 2026-10-06 to 2036-10-03, EC P-256 (prime256v1), CA  [#1:0x31+0x1bb]
        ▾ tbsCertificate — SEQUENCE  [#1:0x35+0x161]
          ▾ version — [0]  [#1:0x39+0x5]
              Version: v3 (0x2) — INTEGER  [#1:0x3b+0x3]
            serialNumber: 2e e2 4d ea 7c 1e 69 20 4b 95 57 8a 94 de d8 d7 …  |..M.|.i K.W.....| — INTEGER, 158-bit  [#1:0x3e+0x16]
          ▾ signature — SEQUENCE, ecdsa-with-SHA256  [#1:0x54+0xc]
              algorithm: "1.2.840.10045.4.3.2" — OBJECT IDENTIFIER, ecdsa-with-SHA256  [#1:0x56+0xa]
          ▾ issuer — SEQUENCE, CN=fillyfoal p12 test, O=Fillyfoal  [#1:0x60+0x33]
            ▾ RelativeDistinguishedName — SET  [#1:0x62+0x1d]
              ▾ AttributeTypeAndValue — SEQUENCE, commonName = fillyfoal p12 test  [#1:0x64+0x1b]
                  type: "2.5.4.3" — OBJECT IDENTIFIER, commonName  [#1:0x66+0x5]
                  value: "fillyfoal p12 test" — UTF8String  [#1:0x6b+0x14]
            ▾ RelativeDistinguishedName — SET  [#1:0x7f+0x14]
              ▾ AttributeTypeAndValue — SEQUENCE, organizationName = Fillyfoal  [#1:0x81+0x12]
                  type: "2.5.4.10" — OBJECT IDENTIFIER, organizationName  [#1:0x83+0x5]
                  value: "Fillyfoal" — UTF8String  [#1:0x88+0xb]
          ▾ validity — SEQUENCE, 2026-10-06 to 2036-10-03 (3650 days)  [#1:0x93+0x20]
              notBefore: 2026-10-06 11:25:52 UTC — UTCTime  [#1:0x95+0xf]
              notAfter: 2036-10-03 11:25:52 UTC — UTCTime  [#1:0xa4+0xf]
          ▾ subject — SEQUENCE, CN=fillyfoal p12 test, O=Fillyfoal  [#1:0xb3+0x33]
            ▾ RelativeDistinguishedName — SET  [#1:0xb5+0x1d]
              ▾ AttributeTypeAndValue — SEQUENCE, commonName = fillyfoal p12 test  [#1:0xb7+0x1b]
                  type: "2.5.4.3" — OBJECT IDENTIFIER, commonName  [#1:0xb9+0x5]
                  value: "fillyfoal p12 test" — UTF8String  [#1:0xbe+0x14]
            ▾ RelativeDistinguishedName — SET  [#1:0xd2+0x14]
              ▾ AttributeTypeAndValue — SEQUENCE, organizationName = Fillyfoal  [#1:0xd4+0x12]
                  type: "2.5.4.10" — OBJECT IDENTIFIER, organizationName  [#1:0xd6+0x5]
                  value: "Fillyfoal" — UTF8String  [#1:0xdb+0xb]
          ▾ subjectPublicKeyInfo — SEQUENCE, EC P-256 (prime256v1)  [#1:0xe6+0x5b]
            ▾ algorithm — SEQUENCE, ecPublicKey = prime256v1  [#1:0xe8+0x15]
                algorithm: "1.2.840.10045.2.1" — OBJECT IDENTIFIER, ecPublicKey  [#1:0xea+0x9]
                namedCurve: "1.2.840.10045.3.1.7" — OBJECT IDENTIFIER, prime256v1  [#1:0xf3+0xa]
            ▾ subjectPublicKey: 04 b4 07 fb 0f ff ad d3 5f d2 7f 5f 37 cd a6 17 …  |........_.._7...| — BIT STRING, uncompressed point, 256-bit coordinates  [#1:0xfd+0x44]
                format: uncompressed (0x4)  [#1:0x100+0x1]
                x: b4 07 fb 0f ff ad d3 5f d2 7f 5f 37 cd a6 17 37 …  |......._.._7...7| — 32 bytes  [#1:0x101+0x20]
                y: 0e 31 73 33 c8 2c bb 9c 3e 6e 01 b0 e6 41 91 39 …  |.1s3.,..>n...A.9| — 32 bytes  [#1:0x121+0x20]
          ▾ extensions — [3]  [#1:0x141+0x55]
            ▾ Extensions — SEQUENCE  [#1:0x143+0x53]
              ▾ Extension — SEQUENCE, subjectKeyIdentifier: 13:62:DE:8A:2A:CA:3D:02:6C:85:89:FC:2C:EF:D5:02:45:1E:8B:89  [#1:0x145+0x1f]
                  extnID: "2.5.29.14" — OBJECT IDENTIFIER, subjectKeyIdentifier  [#1:0x147+0x5]
                ▾ extnValue — OCTET STRING, 22 bytes, encapsulates DER  [#1:0x14c+0x18]
                    SubjectKeyIdentifier: "13:62:DE:8A:2A:CA:3D:02:6C:85:89:FC:2C:EF:D5:02:45:1E:8B:89" — OCTET STRING, 20 bytes  [#1:0x14e+0x16]
              ▾ Extension — SEQUENCE, authorityKeyIdentifier: keyid:13:62:DE:8A:2A:CA:3D:02:6C:85:89:FC:2C:EF:D5:02:45:1E:8B:89  [#1:0x164+0x21]
                  extnID: "2.5.29.35" — OBJECT IDENTIFIER, authorityKeyIdentifier  [#1:0x166+0x5]
                ▾ extnValue — OCTET STRING, 24 bytes, encapsulates DER  [#1:0x16b+0x1a]
                  ▾ AuthorityKeyIdentifier — SEQUENCE  [#1:0x16d+0x18]
                      keyIdentifier: "13:62:DE:8A:2A:CA:3D:02:6C:85:89:FC:2C:EF:D5:02:45:1E:8B:89" — [0], 20 bytes  [#1:0x16f+0x16]
              ▾ Extension — SEQUENCE, basicConstraints (critical): CA:TRUE  [#1:0x185+0x11]
                  extnID: "2.5.29.19" — OBJECT IDENTIFIER, basicConstraints  [#1:0x187+0x5]
                  critical: true — BOOLEAN  [#1:0x18c+0x3]
                ▾ extnValue — OCTET STRING, 5 bytes, encapsulates DER  [#1:0x18f+0x7]
                  ▾ BasicConstraints — SEQUENCE  [#1:0x191+0x5]
                      cA: true — BOOLEAN  [#1:0x193+0x3]
        ▾ signatureAlgorithm — SEQUENCE, ecdsa-with-SHA256  [#1:0x196+0xc]
            algorithm: "1.2.840.10045.4.3.2" — OBJECT IDENTIFIER, ecdsa-with-SHA256  [#1:0x198+0xa]
        ▾ signatureValue — BIT STRING, 568 bits, encapsulates DER  [#1:0x1a2+0x4a]
          ▾ Dss-Sig-Value — SEQUENCE  [#1:0x1a5+0x47]
              r: 0a d3 82 74 2d 75 9e 3a 1b 14 28 8b d3 2e 3c d4 …  |...t-u.:..(...<.| — INTEGER, 252-bit  [#1:0x1a7+0x22]
              s: d4 69 70 d3 8d 16 3b 2f b7 6a 51 38 a6 73 71 54 …  |.ip...;/.jQ8.sqT| — INTEGER, 256-bit  [#1:0x1c9+0x23]
    ▾ Private key: legacy key — Private key (PKCS#8), ecPublicKey, prime256v1  [#2:0x0+0x8a]
      ▾ PrivateKeyInfo — SEQUENCE  [#2:0x0+0x8a]
          version: 0 — INTEGER  [#2:0x3+0x3]
        ▾ privateKeyAlgorithm — SEQUENCE, ecPublicKey = prime256v1  [#2:0x6+0x15]
            algorithm: "1.2.840.10045.2.1" — OBJECT IDENTIFIER, ecPublicKey  [#2:0x8+0x9]
            namedCurve: "1.2.840.10045.3.1.7" — OBJECT IDENTIFIER, prime256v1  [#2:0x11+0xa]
        ▾ privateKey — OCTET STRING, 109 bytes, encapsulates DER  [#2:0x1b+0x6f]
          ▾ ECPrivateKey — SEQUENCE  [#2:0x1d+0x6d]
              version: 1 — INTEGER  [#2:0x1f+0x3]
              privateKey: d4 48 95 38 07 08 88 87 19 59 ab bf d4 a0 69 e1 …  |.H.8.....Y....i.| — OCTET STRING, 32 bytes  [#2:0x22+0x22]
            ▾ publicKey — [1]  [#2:0x44+0x46]
              ▾ publicKey: 04 b4 07 fb 0f ff ad d3 5f d2 7f 5f 37 cd a6 17 …  |........_.._7...| — BIT STRING, uncompressed point, 256-bit coordinates  [#2:0x46+0x44]
                  format: uncompressed (0x4)  [#2:0x49+0x1]
                  x: b4 07 fb 0f ff ad d3 5f d2 7f 5f 37 cd a6 17 37 …  |......._.._7...7| — 32 bytes  [#2:0x4a+0x20]
                  y: 0e 31 73 33 c8 2c bb 9c 3e 6e 01 b0 e6 41 91 39 …  |.1s3.,..>n...A.9| — 32 bytes  [#2:0x6a+0x20]
  ▾ PFX — SEQUENCE  [0x0+0x417]
      version: 3 — INTEGER  [0x4+0x3]
    ▾ authSafe — SEQUENCE, data  [0x7+0x3d5]
        contentType: "1.2.840.113549.1.7.1" — OBJECT IDENTIFIER, data  [0xb+0xb]
      ▾ content — [0]  [0x16+0x3c6]
        ▾ OCTET STRING — 958 bytes, encapsulates DER  [0x1a+0x3c2]
          ▾ SEQUENCE  [0x1e+0x3be]
            ▾ SEQUENCE — encryptedData  [0x22+0x28b]
                OBJECT IDENTIFIER: "1.2.840.113549.1.7.6" — encryptedData  [0x26+0xb]
              ▾ [0]  [0x31+0x27c]
                ▾ SEQUENCE  [0x35+0x278]
                    INTEGER: 0  [0x39+0x3]
                  ▾ SEQUENCE — data  [0x3c+0x271]
                      OBJECT IDENTIFIER: "1.2.840.113549.1.7.1" — data  [0x40+0xb]
                    ▾ SEQUENCE — pbeWithSHAAnd40BitRC2-CBC  [0x4b+0x1e]
                        OBJECT IDENTIFIER: "1.2.840.113549.1.12.1.6" — pbeWithSHAAnd40BitRC2-CBC  [0x4d+0xc]
                      ▾ SEQUENCE  [0x59+0x10]
                          OCTET STRING: 7c b0 ab ea 64 d2 65 cb  ||...d.e.| — 8 bytes  [0x5b+0xa]
                          INTEGER: 2048  [0x65+0x4]
                      [0]: 10 05 da 06 b3 cb f0 07 6b 6a 3e e9 f3 04 41 a7 …  |........kj>...A.| — 576 bytes  [0x69+0x244]
            ▾ SEQUENCE — data  [0x2ad+0x12f]
                OBJECT IDENTIFIER: "1.2.840.113549.1.7.1" — data  [0x2b1+0xb]
              ▾ [0]  [0x2bc+0x120]
                ▾ OCTET STRING — 280 bytes, encapsulates DER  [0x2c0+0x11c]
                  ▾ SEQUENCE  [0x2c4+0x118]
                    ▾ SEQUENCE — pkcs8ShroudedKeyBag  [0x2c8+0x114]
                        OBJECT IDENTIFIER: "1.2.840.113549.1.12.10.1.2" — pkcs8ShroudedKeyBag  [0x2cc+0xd]
                      ▾ [0]  [0x2d9+0xb7]
                        ▾ SEQUENCE  [0x2dc+0xb4]
                          ▾ SEQUENCE — pbeWithSHAAnd3-KeyTripleDES-CBC  [0x2df+0x1e]
                              OBJECT IDENTIFIER: "1.2.840.113549.1.12.1.3" — pbeWithSHAAnd3-KeyTripleDES-CBC  [0x2e1+0xc]
                            ▾ SEQUENCE  [0x2ed+0x10]
                                OCTET STRING: df c7 50 84 3d dd 9a f2  |..P.=...| — 8 bytes  [0x2ef+0xa]
                                INTEGER: 2048  [0x2f9+0x4]
                            OCTET STRING: d1 be 7b f6 5c 3f ab 24 af d5 b4 61 7b 25 eb 9a …  |..{.\?.$...a{%..| — 144 bytes  [0x2fd+0x93]
                      ▾ SET  [0x390+0x4c]
                        ▾ SEQUENCE — friendlyName  [0x392+0x25]
                            OBJECT IDENTIFIER: "1.2.840.113549.1.9.20" — friendlyName  [0x394+0xb]
                          ▾ SET  [0x39f+0x18]
                              BMPString: "legacy key"  [0x3a1+0x16]
                        ▾ SEQUENCE — localKeyID  [0x3b7+0x25]
                            OBJECT IDENTIFIER: "1.2.840.113549.1.9.21" — localKeyID  [0x3b9+0xb]
                          ▾ SET  [0x3c4+0x18]
                              OCTET STRING: 15 21 1e 78 6e fb c8 b0 ac c7 4e 07 42 a1 8e 53 …  |.!.xn.....N.B..S| — 20 bytes  [0x3c6+0x16]
    ▾ macData — SEQUENCE  [0x3dc+0x3b]
      ▾ mac — SEQUENCE  [0x3de+0x23]
        ▾ digestAlgorithm — SEQUENCE, sha1  [0x3e0+0xb]
            algorithm: "1.3.14.3.2.26" — OBJECT IDENTIFIER, sha1  [0x3e2+0x7]
            parameters — NULL  [0x3e9+0x2]
          digest: "08:36:E4:AE:5F:CB:2F:F9:ED:02:31:CE:0F:9D:0D:C5:1B:87:A6:44" — OCTET STRING, 20 bytes  [0x3eb+0x16]
        macSalt: b4 79 08 ee 16 7e e0 e4 86 ba eb 59 51 1f 7c 30  |.y...~.....YQ.|0| — OCTET STRING, 16 bytes  [0x401+0x12]
        iterations: 2048 — INTEGER  [0x413+0x4]
