tests/snapshots/formats__pkcs12__modern-aes.p12.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ modern-aes.p12 — PKCS#12 key store, version 3, MAC sha256  [0x0+0x4b3]
  ▾ Contents — MAC verified
    ▾ Certificate: fillyfoal key — X.509 certificate, CN=fillyfoal p12 test, self-signed, valid 2026-10-06 to 2036-10-03, EC P-256 (prime256v1), CA  [#1:0x31+0x1bb]
      ▾ Certificate — SEQUENCE, CN=fillyfoal p12 test, self-signed, valid 2026-10-06 to 2036-10-03, EC P-256 (prime256v1), CA  [#1:0x31+0x1bb]
        ▾ tbsCertificate — SEQUENCE  [#1:0x35+0x161]
          ▾ version — [0]  [#1:0x39+0x5]
              Version: v3 (0x2) — INTEGER  [#1:0x3b+0x3]
            serialNumber: 2e e2 4d ea 7c 1e 69 20 4b 95 57 8a 94 de d8 d7 …  |..M.|.i K.W.....| — INTEGER, 158-bit  [#1:0x3e+0x16]
          ▾ signature — SEQUENCE, ecdsa-with-SHA256  [#1:0x54+0xc]
              algorithm: "1.2.840.10045.4.3.2" — OBJECT IDENTIFIER, ecdsa-with-SHA256  [#1:0x56+0xa]
          ▾ issuer — SEQUENCE, CN=fillyfoal p12 test, O=Fillyfoal  [#1:0x60+0x33]
            ▾ RelativeDistinguishedName — SET  [#1:0x62+0x1d]
              ▾ AttributeTypeAndValue — SEQUENCE, commonName = fillyfoal p12 test  [#1:0x64+0x1b]
                  type: "2.5.4.3" — OBJECT IDENTIFIER, commonName  [#1:0x66+0x5]
                  value: "fillyfoal p12 test" — UTF8String  [#1:0x6b+0x14]
            ▾ RelativeDistinguishedName — SET  [#1:0x7f+0x14]
              ▾ AttributeTypeAndValue — SEQUENCE, organizationName = Fillyfoal  [#1:0x81+0x12]
                  type: "2.5.4.10" — OBJECT IDENTIFIER, organizationName  [#1:0x83+0x5]
                  value: "Fillyfoal" — UTF8String  [#1:0x88+0xb]
          ▾ validity — SEQUENCE, 2026-10-06 to 2036-10-03 (3650 days)  [#1:0x93+0x20]
              notBefore: 2026-10-06 11:25:52 UTC — UTCTime  [#1:0x95+0xf]
              notAfter: 2036-10-03 11:25:52 UTC — UTCTime  [#1:0xa4+0xf]
          ▾ subject — SEQUENCE, CN=fillyfoal p12 test, O=Fillyfoal  [#1:0xb3+0x33]
            ▾ RelativeDistinguishedName — SET  [#1:0xb5+0x1d]
              ▾ AttributeTypeAndValue — SEQUENCE, commonName = fillyfoal p12 test  [#1:0xb7+0x1b]
                  type: "2.5.4.3" — OBJECT IDENTIFIER, commonName  [#1:0xb9+0x5]
                  value: "fillyfoal p12 test" — UTF8String  [#1:0xbe+0x14]
            ▾ RelativeDistinguishedName — SET  [#1:0xd2+0x14]
              ▾ AttributeTypeAndValue — SEQUENCE, organizationName = Fillyfoal  [#1:0xd4+0x12]
                  type: "2.5.4.10" — OBJECT IDENTIFIER, organizationName  [#1:0xd6+0x5]
                  value: "Fillyfoal" — UTF8String  [#1:0xdb+0xb]
          ▾ subjectPublicKeyInfo — SEQUENCE, EC P-256 (prime256v1)  [#1:0xe6+0x5b]
            ▾ algorithm — SEQUENCE, ecPublicKey = prime256v1  [#1:0xe8+0x15]
                algorithm: "1.2.840.10045.2.1" — OBJECT IDENTIFIER, ecPublicKey  [#1:0xea+0x9]
                namedCurve: "1.2.840.10045.3.1.7" — OBJECT IDENTIFIER, prime256v1  [#1:0xf3+0xa]
            ▾ subjectPublicKey: 04 b4 07 fb 0f ff ad d3 5f d2 7f 5f 37 cd a6 17 …  |........_.._7...| — BIT STRING, uncompressed point, 256-bit coordinates  [#1:0xfd+0x44]
                format: uncompressed (0x4)  [#1:0x100+0x1]
                x: b4 07 fb 0f ff ad d3 5f d2 7f 5f 37 cd a6 17 37 …  |......._.._7...7| — 32 bytes  [#1:0x101+0x20]
                y: 0e 31 73 33 c8 2c bb 9c 3e 6e 01 b0 e6 41 91 39 …  |.1s3.,..>n...A.9| — 32 bytes  [#1:0x121+0x20]
          ▾ extensions — [3]  [#1:0x141+0x55]
            ▾ Extensions — SEQUENCE  [#1:0x143+0x53]
              ▾ Extension — SEQUENCE, subjectKeyIdentifier: 13:62:DE:8A:2A:CA:3D:02:6C:85:89:FC:2C:EF:D5:02:45:1E:8B:89  [#1:0x145+0x1f]
                  extnID: "2.5.29.14" — OBJECT IDENTIFIER, subjectKeyIdentifier  [#1:0x147+0x5]
                ▾ extnValue — OCTET STRING, 22 bytes, encapsulates DER  [#1:0x14c+0x18]
                    SubjectKeyIdentifier: "13:62:DE:8A:2A:CA:3D:02:6C:85:89:FC:2C:EF:D5:02:45:1E:8B:89" — OCTET STRING, 20 bytes  [#1:0x14e+0x16]
              ▾ Extension — SEQUENCE, authorityKeyIdentifier: keyid:13:62:DE:8A:2A:CA:3D:02:6C:85:89:FC:2C:EF:D5:02:45:1E:8B:89  [#1:0x164+0x21]
                  extnID: "2.5.29.35" — OBJECT IDENTIFIER, authorityKeyIdentifier  [#1:0x166+0x5]
                ▾ extnValue — OCTET STRING, 24 bytes, encapsulates DER  [#1:0x16b+0x1a]
                  ▾ AuthorityKeyIdentifier — SEQUENCE  [#1:0x16d+0x18]
                      keyIdentifier: "13:62:DE:8A:2A:CA:3D:02:6C:85:89:FC:2C:EF:D5:02:45:1E:8B:89" — [0], 20 bytes  [#1:0x16f+0x16]
              ▾ Extension — SEQUENCE, basicConstraints (critical): CA:TRUE  [#1:0x185+0x11]
                  extnID: "2.5.29.19" — OBJECT IDENTIFIER, basicConstraints  [#1:0x187+0x5]
                  critical: true — BOOLEAN  [#1:0x18c+0x3]
                ▾ extnValue — OCTET STRING, 5 bytes, encapsulates DER  [#1:0x18f+0x7]
                  ▾ BasicConstraints — SEQUENCE  [#1:0x191+0x5]
                      cA: true — BOOLEAN  [#1:0x193+0x3]
        ▾ signatureAlgorithm — SEQUENCE, ecdsa-with-SHA256  [#1:0x196+0xc]
            algorithm: "1.2.840.10045.4.3.2" — OBJECT IDENTIFIER, ecdsa-with-SHA256  [#1:0x198+0xa]
        ▾ signatureValue — BIT STRING, 568 bits, encapsulates DER  [#1:0x1a2+0x4a]
          ▾ Dss-Sig-Value — SEQUENCE  [#1:0x1a5+0x47]
              r: 0a d3 82 74 2d 75 9e 3a 1b 14 28 8b d3 2e 3c d4 …  |...t-u.:..(...<.| — INTEGER, 252-bit  [#1:0x1a7+0x22]
              s: d4 69 70 d3 8d 16 3b 2f b7 6a 51 38 a6 73 71 54 …  |.ip...;/.jQ8.sqT| — INTEGER, 256-bit  [#1:0x1c9+0x23]
    ▾ Private key: fillyfoal key — Private key (PKCS#8), ecPublicKey, prime256v1  [#2:0x0+0x8a]
      ▾ PrivateKeyInfo — SEQUENCE  [#2:0x0+0x8a]
          version: 0 — INTEGER  [#2:0x3+0x3]
        ▾ privateKeyAlgorithm — SEQUENCE, ecPublicKey = prime256v1  [#2:0x6+0x15]
            algorithm: "1.2.840.10045.2.1" — OBJECT IDENTIFIER, ecPublicKey  [#2:0x8+0x9]
            namedCurve: "1.2.840.10045.3.1.7" — OBJECT IDENTIFIER, prime256v1  [#2:0x11+0xa]
        ▾ privateKey — OCTET STRING, 109 bytes, encapsulates DER  [#2:0x1b+0x6f]
          ▾ ECPrivateKey — SEQUENCE  [#2:0x1d+0x6d]
              version: 1 — INTEGER  [#2:0x1f+0x3]
              privateKey: d4 48 95 38 07 08 88 87 19 59 ab bf d4 a0 69 e1 …  |.H.8.....Y....i.| — OCTET STRING, 32 bytes  [#2:0x22+0x22]
            ▾ publicKey — [1]  [#2:0x44+0x46]
              ▾ publicKey: 04 b4 07 fb 0f ff ad d3 5f d2 7f 5f 37 cd a6 17 …  |........_.._7...| — BIT STRING, uncompressed point, 256-bit coordinates  [#2:0x46+0x44]
                  format: uncompressed (0x4)  [#2:0x49+0x1]
                  x: b4 07 fb 0f ff ad d3 5f d2 7f 5f 37 cd a6 17 37 …  |......._.._7...7| — 32 bytes  [#2:0x4a+0x20]
                  y: 0e 31 73 33 c8 2c bb 9c 3e 6e 01 b0 e6 41 91 39 …  |.1s3.,..>n...A.9| — 32 bytes  [#2:0x6a+0x20]
  ▾ PFX — SEQUENCE  [0x0+0x4b3]
      version: 3 — INTEGER  [0x4+0x3]
    ▾ authSafe — SEQUENCE, data  [0x7+0x461]
        contentType: "1.2.840.113549.1.7.1" — OBJECT IDENTIFIER, data  [0xb+0xb]
      ▾ content — [0]  [0x16+0x452]
        ▾ OCTET STRING — 1098 bytes, encapsulates DER  [0x1a+0x44e]
          ▾ SEQUENCE  [0x1e+0x44a]
            ▾ SEQUENCE — encryptedData  [0x22+0x2ce]
                OBJECT IDENTIFIER: "1.2.840.113549.1.7.6" — encryptedData  [0x26+0xb]
              ▾ [0]  [0x31+0x2bf]
                ▾ SEQUENCE  [0x35+0x2bb]
                    INTEGER: 0  [0x39+0x3]
                  ▾ SEQUENCE — data  [0x3c+0x2b4]
                      OBJECT IDENTIFIER: "1.2.840.113549.1.7.1" — data  [0x40+0xb]
                    ▾ SEQUENCE — PBES2  [0x4b+0x61]
                        OBJECT IDENTIFIER: "1.2.840.113549.1.5.13" — PBES2  [0x4d+0xb]
                      ▾ SEQUENCE  [0x58+0x54]
                        ▾ SEQUENCE — PBKDF2  [0x5a+0x33]
                            OBJECT IDENTIFIER: "1.2.840.113549.1.5.12" — PBKDF2  [0x5c+0xb]
                          ▾ SEQUENCE  [0x67+0x26]
                              OCTET STRING: 64 9d 68 61 82 11 16 45 d9 97 4a 43 bf 5b e6 ab  |d.ha...E..JC.[..| — 16 bytes  [0x69+0x12]
                              INTEGER: 2048  [0x7b+0x4]
                            ▾ SEQUENCE — hmacWithSHA256  [0x7f+0xe]
                                OBJECT IDENTIFIER: "1.2.840.113549.2.9" — hmacWithSHA256  [0x81+0xa]
                                NULL  [0x8b+0x2]
                        ▾ SEQUENCE — aes256-CBC  [0x8d+0x1f]
                            OBJECT IDENTIFIER: "2.16.840.1.101.3.4.1.42" — aes256-CBC  [0x8f+0xb]
                            OCTET STRING: 93 82 26 f7 d9 72 8b 3f 19 4a 4d 07 e0 fa 1f 2b  |..&..r.?.JM....+| — 16 bytes  [0x9a+0x12]
                      [0]: 4d ed e0 8e 8a bc 71 56 7b 8c 61 b0 4c 3e db c0 …  |M.....qV{.a.L>..| — 576 bytes  [0xac+0x244]
            ▾ SEQUENCE — data  [0x2f0+0x178]
                OBJECT IDENTIFIER: "1.2.840.113549.1.7.1" — data  [0x2f4+0xb]
              ▾ [0]  [0x2ff+0x169]
                ▾ OCTET STRING — 353 bytes, encapsulates DER  [0x303+0x165]
                  ▾ SEQUENCE  [0x307+0x161]
                    ▾ SEQUENCE — pkcs8ShroudedKeyBag  [0x30b+0x15d]
                        OBJECT IDENTIFIER: "1.2.840.113549.1.12.10.1.2" — pkcs8ShroudedKeyBag  [0x30f+0xd]
                      ▾ [0]  [0x31c+0xfa]
                        ▾ SEQUENCE  [0x31f+0xf7]
                          ▾ SEQUENCE — PBES2  [0x322+0x61]
                              OBJECT IDENTIFIER: "1.2.840.113549.1.5.13" — PBES2  [0x324+0xb]
                            ▾ SEQUENCE  [0x32f+0x54]
                              ▾ SEQUENCE — PBKDF2  [0x331+0x33]
                                  OBJECT IDENTIFIER: "1.2.840.113549.1.5.12" — PBKDF2  [0x333+0xb]
                                ▾ SEQUENCE  [0x33e+0x26]
                                    OCTET STRING: a6 6b 7e d3 e8 5b ed 72 ba fc 81 e2 e7 47 2d ff  |.k~..[.r.....G-.| — 16 bytes  [0x340+0x12]
                                    INTEGER: 2048  [0x352+0x4]
                                  ▾ SEQUENCE — hmacWithSHA256  [0x356+0xe]
                                      OBJECT IDENTIFIER: "1.2.840.113549.2.9" — hmacWithSHA256  [0x358+0xa]
                                      NULL  [0x362+0x2]
                              ▾ SEQUENCE — aes256-CBC  [0x364+0x1f]
                                  OBJECT IDENTIFIER: "2.16.840.1.101.3.4.1.42" — aes256-CBC  [0x366+0xb]
                                  OCTET STRING: 8d 59 81 19 f0 5b 51 91 3a c6 86 d3 93 7b 5f 15  |.Y...[Q.:....{_.| — 16 bytes  [0x371+0x12]
                            OCTET STRING: fc 85 07 47 47 aa cf c0 91 cc 36 a2 0a 4e 73 6d …  |...GG.....6..Nsm| — 144 bytes  [0x383+0x93]
                      ▾ SET  [0x416+0x52]
                        ▾ SEQUENCE — localKeyID  [0x418+0x25]
                            OBJECT IDENTIFIER: "1.2.840.113549.1.9.21" — localKeyID  [0x41a+0xb]
                          ▾ SET  [0x425+0x18]
                              OCTET STRING: 15 21 1e 78 6e fb c8 b0 ac c7 4e 07 42 a1 8e 53 …  |.!.xn.....N.B..S| — 20 bytes  [0x427+0x16]
                        ▾ SEQUENCE — friendlyName  [0x43d+0x2b]
                            OBJECT IDENTIFIER: "1.2.840.113549.1.9.20" — friendlyName  [0x43f+0xb]
                          ▾ SET  [0x44a+0x1e]
                              BMPString: "fillyfoal key"  [0x44c+0x1c]
    ▾ macData — SEQUENCE  [0x468+0x4b]
      ▾ mac — SEQUENCE  [0x46a+0x33]
        ▾ digestAlgorithm — SEQUENCE, sha256  [0x46c+0xf]
            algorithm: "2.16.840.1.101.3.4.2.1" — OBJECT IDENTIFIER, sha256  [0x46e+0xb]
            parameters — NULL  [0x479+0x2]
          digest: "86:7B:7D:97:1B:32:3A:3C:C4:07:96:A5:86:E5:E9:45:53:F4:1E:CC:67:84:F1:72:01:9C:C1:1F:8A:2B:42:52" — OCTET STRING, 32 bytes  [0x47b+0x22]
        macSalt: be ee 73 ec fd e3 ee a5 dd 00 4f 4f 09 29 17 45  |..s.......OO.).E| — OCTET STRING, 16 bytes  [0x49d+0x12]
        iterations: 2048 — INTEGER  [0x4af+0x4]
